# DL-Volatility-Forecasting

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: README.md
archive/codas/: README.md  build_hedge_episodes.py  hedge_study.py  hf_lob_pilot.py  intraday_dist.py
archive/legacy/: README.md
configs/: default.yaml  nvda.yaml  spx.yaml
experiments/: README.md  ledger.csv
scripts/: audit_data.py  build_hedge_episodes.py  hedge_study.py  hf_lob_pilot.py  intraday_dist.py  intraday_oracle.py  iv_only.py  oracle_test.py  pull_0dte.py  pull_parallel.py  pull_spx_history.py  run_experiment.py  status.py  study_0dte.py  surface_gate.py
tests/: conftest.py  test_baselines.py  test_determinism.py  test_hybrid.py  test_intraday.py  test_metrics.py  test_no_lookahead.py  test_panel_alignment.py  test_splits.py  test_volsolve.py  test_walkforward.py
volforecast/: __init__.py  calendar.py  cli.py  config.py  datasets.py  intraday.py  panel.py  seed.py  splits.py  timeutil.py
volforecast/baselines/: __init__.py  base.py  foundation.py  garch.py  har_rv.py  naive_iv.py  persistence.py
volforecast/data/: __init__.py  adapter.py  cache.py  databento.py  massive.py  schema.py  synthetic.py  volsolve.py
volforecast/eval/: __init__.py  compare.py  metrics.py  walkforward.py
volforecast/features/: __init__.py  calendar_feats.py  har.py  intraday.py  realized.py  surface.py  targets.py
volforecast/models/: __init__.py  classical_arms.py  gate.py  heads.py  hybrid.py  losses.py  prior.py  residual_transformer.py  trunks.py
volforecast/train/: engine.py
(+4 files in other folders)
