[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volforecast"
version = "0.1.0"
description = "Leakage-safe SPX/0DTE realized-volatility forecasting"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "arch>=6.0",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.64",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
model = ["torch>=2.0"]
foundation = ["chronos-forecasting"]
databento = ["py_vollib", "databento"]

[project.scripts]
vf = "volforecast.cli:main"

[tool.setuptools.packages.find]
include = ["volforecast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
